--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     #keyboard {
       margin-top: 30px;
       display: flex;
-      flex-diorection: column;
+      flex-direction: column;
       gap: 10px;
       align-items: center;
     }
@@ -59,7 +59,7 @@
       border: none;
       padding: 10px;
       min-width: 30px;
-      border-radius: 5px
+      border-radius: 5px;
       font-weight: bold;
       cursor: pointer;
       user-select: none;
@@ -74,46 +74,46 @@
 <body>
   <div id="game">
     <div class="row">
-      <div class="tile">
-      <div class="tile">
-      <div class="tile">
-      <div class="tile">
-      <div class="tile">
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
     </div>
     <div class="row">
-      <div class="tile">
-      <div class="tile">
-      <div class="tile">
-      <div class="tile">
-      <div class="tile">
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
     </div>
     <div class="row">
-      <div class="tile">
-      <div class="tile">
-      <div class="tile">
-      <div class="tile">
-      <div class="tile">
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
     </div>
     <div class="row">
-      <div class="tile">
-      <div class="tile">
-      <div class="tile">
-      <div class="tile">
-      <div class="tile">
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
     </div>
     <div class="row">
-      <div class="tile">
-      <div class="tile">
-      <div class="tile">
-      <div class="tile">
-      <div class="tile">
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
     </div>
     <div class="row">
-      <div class="tile">
-      <div class="tile">
-      <div class="tile">
-      <div class="tile">
-      <div class="tile">
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
     </div>
   </div>
 
@@ -143,7 +143,7 @@
       <button class ="key">L</button>
     </div>
     <div class="keyboard-row">
-      <button class ="key.wide">ENTER</button>
+      <button class ="key wide">ENTER</button>
       <button class ="key">Z</button>
       <button class ="key">X</button>
       <button class ="key">C</button>
@@ -151,7 +151,7 @@
       <button class ="key">B</button>
       <button class ="key">N</button>
       <button class ="key">M</button>
-      <button class ="key.wide">⌫</button>
+      <button class ="key wide">⌫</button>
     </div>
 
 </body>
