--- a/index.html
+++ b/index.html
@@ -3,19 +3,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Wordle Clone</title>
+  <title>Samordle</title>
   <style>
     body {
       margin: 0;
       font-family: sans-serif;
       background-color: #121213;
       color: white;
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
     }
-
+    #container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    
     #game {
       display: flex;
       flex-direction: column;
@@ -72,6 +77,7 @@
   </style>
 </head>
 <body>
+  <div id="container">
   <div id="game">
     <div class="row">
       <div class="tile"></div>
@@ -152,6 +158,7 @@
       <button class ="key">N</button>
       <button class ="key">M</button>
       <button class ="key wide">⌫</button>
+    </div>
     </div>
 
 </body>
