--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      gap: 30px;
     }
     
     #game {
@@ -33,13 +34,13 @@
     }
 
     .tile {
-      width: 50px;
-      height: 50px;
+      width: 60px;
+      height: 60px;
       border: 2px solid #3a3a3c;
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 24px;
+      font-size: 28px;
       text-transform: uppercase;
       font-weight: bold;
       background-color: #121213;
@@ -62,16 +63,17 @@
       background-color: #818384;
       color: white;
       border: none;
-      padding: 10px;
-      min-width: 30px;
+      padding: 14px;
+      min-width: 40px;
       border-radius: 5px;
       font-weight: bold;
       cursor: pointer;
       user-select: none;
+      font-size: 18px;
     }
 
     .key.wide {
-      min-width: 60px;
+      min-width: 70px;
     }
     
   </style>
