--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       margin: 0;
-      font-family: sans-serif;
+      font-family: "Times New Roman", serif;
       background-color: #121213;
       color: white;
       height: 100vh;
