--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
       color: white;
       border: none;
       padding: 12px;
-      min-width: 35px;
+      min-width: 36px;
+      height: 60px;
       border-radius: 5px;
       font-weight: bold;
       cursor: pointer;
@@ -75,6 +76,7 @@
     .key.wide {
       min-width: 50px;
     }
+
     
   </style>
 </head>
@@ -139,7 +141,6 @@
       <button class ="key">P</button>
     </div>
     <div class="keyboard-row">
-      <div class="spacer"></div>
       <button class ="key">A</button>
       <button class ="key">S</button>
       <button class ="key">D</button>
@@ -151,7 +152,7 @@
       <button class ="key">L</button>
     </div>
     <div class="keyboard-row">
-      <button class ="key wide">ENTER</button>
+      <button class ="key wide" aria-label="Enter">ENTER</button>
       <button class ="key">Z</button>
       <button class ="key">X</button>
       <button class ="key">C</button>
@@ -159,9 +160,13 @@
       <button class ="key">B</button>
       <button class ="key">N</button>
       <button class ="key">M</button>
-      <button class ="key wide">⌫</button>
+      <button class ="key wide" aria-label="Backspace">⌫</button>
     </div>
     </div>
-
+  </div>
+  
+  <script>
+    
+  </script>
 </body>
 </html>
