--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             }
             guess = guess.toUpperCase();
 
-            if (words.length() === 0) {
+            if (words.length === 0) {
               alert("Game still loading, please wait...);
               return;
             }
