--- a/index.html
+++ b/index.html
@@ -207,6 +207,8 @@
             }
             guess = guess.toUpperCase();
             console.log("guess:", guess);
+            console.log("in words?:", words.includes(guess));
+            console.log(words[0], words[0].length);
             if (words.length === 0) {
               alert("Game still loading, please wait...");
               return;
