--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
             console.log("guess:", guess);
             console.log("in words?:", words.includes(guess));
             console.log(words[0], words[0].length);
+            console.log(words[1909]);
             if (words.length === 0) {
               alert("Game still loading, please wait...");
               return;
