--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 if (guess[i] === solution[i]) {
                   tile.classList.add("correct");
                 }
-                else if (solution.includes(guess[i]) {
+                else if (solution.includes(guess[i])) {
                   tile.classList.add("present");
                 }
                 else {
