--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 }
                 else {
                   tile.classList.add("absent");
-                  key.classList.add("absnet");
+                  key.classList.add("absent");
                 }
             }
             row++;
