--- a/index.html
+++ b/index.html
@@ -251,7 +251,6 @@
                 const tile = rows[row].children[i];
                 const letter = guess[i];
                 const key = Array.from(keys).find(k => k.textContent === guess[i]);
-                console.log(key.textContent);
                 if (letter === solution[i]) {
                   tile.classList.add("correct");
                   key.classList.add("correct");
@@ -262,7 +261,7 @@
               for (let i = 0; i < 5; i++) {
                 const tile = rows[row].children[i];
                 const letter = guess[i];
-  
+                const key = Array.from(keys).find(k => k.textContent === guess[i]);
                 if (tile.classList.contains("correct")) continue; // already green
   
                 if (solution.includes(letter) && letterCounts[letter] > 0) {
@@ -272,6 +271,7 @@
                   letterCounts[letter]--;
                 } else {
                   tile.classList.add("absent");
+                  console.log(key.textContent);
                   key.classList.add("absent");
                 }
               }
