--- a/index.html
+++ b/index.html
@@ -275,7 +275,9 @@
                   }
                 } else {
                   tile.classList.add("absent");
-                  key.classList.add("absent");
+                  if (!key.classList.contains("present")) {
+                    key.classList.add("absent");
+                  }
                 }
               }
             row++;
