--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                 corrects++;
               }
             }
-            if (corrects = 5) {
+            if (corrects === 5) {
               document.getElementById("win-screen").classList.remove("hidden");
               return;
             }
