--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
               }
             let corrects = 0;
             for (let i = 0; i < 5; i++) {
-              if (guess[i] = solution[i]) {
+              if (guess[i] === solution[i]) {
                 corrects++;
               }
             }
