--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     }
 
     .win-box {
-      background: white;
+      background: #121213;
       padding: 2rem;
       border-radius: 10px;
       text-align: center;
@@ -119,6 +119,17 @@
 
     .hidden {
       display: none !important;
+    }
+
+    #play-again {
+      background-color: #323236; 
+      color: white;
+      border: none;
+      padding: 12px 24px;
+      font-size: 18px;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
     }
   </style>
 </head>
