--- a/index.html
+++ b/index.html
@@ -117,10 +117,33 @@
       text-align: center;
     }
 
+
+    #lose-screen {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0,0,0,0.6);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 10;
+    }
+
+    .lose-box {
+      background: #121213;
+      padding: 2rem;
+      border-radius: 10px;
+      text-align: center;
+    }
+
+    
     .hidden {
       display: none !important;
     }
 
+    
     #play-again {
       background-color: #323236; 
       color: white;
@@ -224,6 +247,13 @@
       <button id="play-again">Play Again</button>
      </div>
   </div>
+
+    <div id="lose-screen" class="hidden">
+    <div class="lose-box">
+      <h2>😢 You Lose... 😢</h2>
+      <button id="play-again">Play Again</button>
+     </div>
+  </div>
   
   <script>
 
@@ -316,6 +346,10 @@
             }
             else {
               row++;
+              if (row > 5) {
+                document.getElementById("lose-screen").classList.remove("hidden");
+                return;
+              }
               col = 0;
             }
           }
