--- a/index.html
+++ b/index.html
@@ -154,6 +154,17 @@
       cursor: pointer;
       transition: background-color 0.3s ease;
     }
+
+    #play-again-lose {
+      background-color: #323236; 
+      color: white;
+      border: none;
+      padding: 12px 24px;
+      font-size: 18px;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
   </style>
 </head>
 <body>
@@ -251,7 +262,7 @@
     <div id="lose-screen" class="hidden">
     <div class="lose-box">
       <h2>😢 You Lose... 😢</h2>
-      <button id="play-again">Play Again</button>
+      <button id="play-again-lose">Play Again</button>
      </div>
   </div>
   
