--- a/index.html
+++ b/index.html
@@ -432,6 +432,9 @@
     });
         document.getElementById("play-again").addEventListener("click", () => {
           location.reload();
+      });    
+        document.getElementById("play-again-lose").addEventListener("click", () => {
+          location.reload();
       });            
     
   </script>
